--- a/00Pratice/02advanced/06concurrency_futures.ipynb
+++ b/00Pratice/02advanced/06concurrency_futures.ipynb
@@ -30,15 +30,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143655\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143656\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143657\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143658\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143659\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143660\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143661\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143662\n",
-      "Download 8 sites in 6.045021199999994 seconds\n"
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143655\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143656\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143657\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143658\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143659\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143660\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143661\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143662\n",
+      "Download 8 sites in 3.3536462 seconds\n"
      ]
     }
    ],
@@ -82,22 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143656\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143658\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143655\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143657\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143659\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143660\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143662\n",
-      "Read 62788 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143661\n",
-      "Download 8 sites in 1.0352042999999966 seconds\n"
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143655\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143657\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143656\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143658\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143659\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143662\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143661\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143660\n",
+      "Download 8 sites in 0.7938451999999927 seconds\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download 8 sites in 0.9625254999999697 seconds\n"
+      "Download 8 sites in 0.2401638000000048 seconds\n"
      ]
     }
    ],
@@ -196,22 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 62970 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143661\n",
-      "Read 62970 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143658\n",
-      "Read 62970 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143662\n",
-      "Read 62970 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143657\n",
-      "Read 62970 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143656\n",
-      "Read 62970 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143660\n",
-      "Read 62970 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143655\n",
-      "Read 62970 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143659\n",
-      "Download 8 sites in 0.7090143000000353 seconds\n"
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143657Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143655\n",
+      "\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143662\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143661\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143658\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143660\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143656\n",
+      "Read 63060 from http://www.dapenti.com/blog/readforwx.asp?name=xilei&id=143659\n",
+      "Download 8 sites in 0.5215295999999938 seconds\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "46cb6235441a8b74df724a68ed242e7b6759bfc907d92e7c8b163c38b1b4592e"
+    "hash": "49fdd20b2b68a4dd8ebcbb061b9c04f8e52f6472af90d6159269a7c8abf5d944"
    }
   }
  },
