--- a/00Pratice/03os/01多进程/04练习题.ipynb
+++ b/00Pratice/03os/01多进程/04练习题.ipynb
@@ -49,6 +49,75 @@
     "\n",
     "## 服务端"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%writefile  server.py\n",
+    "from socket import *\n",
+    "\n",
+    "server=socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "server.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)\n",
+    "server.bind((\"127.0.0.1\", 8080))\n",
+    "\n",
+    "server.listen(5)\n",
+    "\n",
+    "while True:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.进程按顺序执行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting temp_multi.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile  temp_multi.py\n",
+    "# 查看子进程的父进程id\n",
+    "from multiprocessing import Process\n",
+    "import time\n",
+    "import os\n",
+    "import random\n",
+    "\n",
+    "def task(n):\n",
+    "    time.sleep(random.randint(1, 3))\n",
+    "    print(\"--------->{}\".format(n))\n",
+    "    \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    __spec__ = \"ModuleSpec(name='builtins', loader=<class '_frozen_importlib.BuiltinImporter'>)\"\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    p1=Process(target=task,args=(1,))\n",
+    "    p2=Process(target=task,args=(2,))\n",
+    "    p3=Process(target=task,args=(3,))\n",
+    "    p_l=[p1,p2,p3]\n",
+    "    \n",
+    "    for p in p_l:\n",
+    "        p.start() # 仅仅只是给操作系统发送了一个信号\n",
+    "        p.join()\n",
+    "\n",
+    "\n",
+    "    print('--------->4')"
+   ]
   }
  ],
  "metadata": {
