多进程练习

--- a/00Pratice/03os/01多进程/04练习题.ipynb
+++ b/00Pratice/03os/01多进程/04练习题.ipynb
@@ -52,21 +52,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing server.py\n"
+     ]
+    }
+   ],
    "source": [
-    "# %%writefile  server.py\n",
+    "%%writefile  server.py\n",
+    "from socket import *\n",
+    "from multiprocessing import Process\n",
+    "\n",
+    "def talk(conn):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            data=conn.recv(1024)\n",
+    "            if not data:\n",
+    "                break\n",
+    "            conn.send(data.upper())\n",
+    "        except ConnectionResetError:\n",
+    "            break\n",
+    "    conn.close()\n",
+    "\n",
+    "\n",
+    "def server(ip,port):\n",
+    "    server = socket(AF_INET, SOCK_STREAM)\n",
+    "    server.setsockopt(SOL_SOCKET, SO_REUSEADDR, 1)\n",
+    "    server.bind((ip,port))\n",
+    "\n",
+    "    server.listen(5)\n",
+    "    while True:\n",
+    "        conn,add=server.accept()\n",
+    "        p=Process(target=talk,args=(conn,))\n",
+    "        p.start()\n",
+    "\n",
+    "    server.close()    \n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    server('127.0.0.1', 8080)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing client.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile  client.py\n",
     "from socket import *\n",
     "\n",
-    "server=socket(socket.AF_INET, socket.SOCK_STREAM)\n",
-    "server.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)\n",
-    "server.bind((\"127.0.0.1\", 8080))\n",
-    "\n",
-    "server.listen(5)\n",
+    "client=socket(AF_INET, SOCK_STREAM)\n",
+    "client.connect((\"127.0.0.1\", 8080))\n",
     "\n",
     "while True:\n",
-    "    "
+    "    msg=input('>>: '.strip())\n",
+    "    if not msg:continue\n",
+    "\n",
+    "    client.send(msg.encode('utf-8'))\n",
+    "    data=client.recv(1024)\n",
+    "    print(data.decode(\"utf-8\"))"
    ]
   },
   {
@@ -78,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +152,6 @@
     "# 查看子进程的父进程id\n",
     "from multiprocessing import Process\n",
     "import time\n",
-    "import os\n",
     "import random\n",
     "\n",
     "def task(n):\n",
@@ -122,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -136,12 +193,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e42634819b8c191a5d07eaf23810ff32516dd8d3875f28ec3e488928fbd3c187"
+    "hash": "af2924f10f5eb76fd65ccea448a69e80be7838e947e8a1ae982ab7073141c8a7"
    }
   }
  },
