--- a/00Pratice/03os/01多进程/06互斥锁.ipynb
+++ b/00Pratice/03os/01多进程/06互斥锁.ipynb
@@ -90,7 +90,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 抢票练习"
+    "# 抢票练习\n",
+    " - 无锁"
    ]
   },
   {
@@ -138,6 +139,13 @@
     "        p=Process(target=task,args=(f\"路人{i}\",))\n",
     "        p.start()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - 加锁"
    ]
   },
   {
@@ -189,6 +197,58 @@
     "    for i in range(10):\n",
     "        p=Process(target=task,args=(f\"路人{i}\",mutex))\n",
     "        p.start()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - 互斥锁与join的区别</br>\n",
+    "   join方法效率低，会变成单进程。</br>\n",
+    "   互斥锁可以提升效率，锁的粒度可以控制。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile test_mutex.py\n",
+    "from multiprocessing import Process,Lock\n",
+    "import time\n",
+    "import json\n",
+    "\n",
+    "def search(name):\n",
+    "    # 模拟网络延迟\n",
+    "    time.sleep(1)\n",
+    "    dic=json.load(open(r\"00Pratice\\03os\\01多进程\\db.txt\", \"r\"))\n",
+    "    print(f'{name} 查看剩余票数：{dic[\"count\"]}')\n",
+    "    \n",
+    "def get(name,mutex):\n",
+    "    time.sleep(1)\n",
+    "    dic=json.load(open(r\"00Pratice\\03os\\01多进程\\db.txt\", \"r\"))\n",
+    "    if dic[\"count\"] > 0:\n",
+    "        dic[\"count\"]=dic[\"count\"]-1\n",
+    "        print(f\"{name} 购票成功\")\n",
+    "        time.sleep(3)\n",
+    "        json.dump(dic, open(r\"00Pratice\\03os\\01多进程\\db.txt\", \"w\"))\n",
+    "    else:\n",
+    "        print(f\"{name} 购票失败\")\n",
+    "\n",
+    "def task(name):\n",
+    "    #! 查票操作不要加锁，影响效率。\n",
+    "    search(name)\n",
+    "    get(name)\n",
+    "\n",
+    "if __name__ ==\"__main__\":\n",
+    "    #* 加锁\n",
+    "    mutex=Lock()\n",
+    "    for i in range(10):\n",
+    "        p=Process(target=task,args=(f\"路人{i}\",))\n",
+    "        p.start()\n",
+    "        p.join()\n",
     "    "
    ]
   }
