--- a/00Pratice/03os/01多进程/07队列.ipynb
+++ b/00Pratice/03os/01多进程/07队列.ipynb
@@ -63,11 +63,211 @@
     "# q.full()：调用此方法时q已满则返回True，该结果不可靠，比如在返回True的过程中，如果队列中的项目被取走。\n",
     "# q.qsize():返回队列中目前项目的正确数量，结果也不可靠，理由同q.empty()和q.full()一样\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 生产者消费者模型\n",
+    "- 普通版本"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "生产者生产了包子1\n",
+      "消费者吃了包子1\n",
+      "生产者生产了包子2\n",
+      "消费者吃了包子2\n",
+      "生产者生产了包子3\n",
+      "消费者吃了包子3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "def producer():\n",
+    "    for i in range(1,4):\n",
+    "        res=f\"包子{i}\"\n",
+    "        time.sleep(2)\n",
+    "        print(f\"生产者生产了{res}\")\n",
+    "        consumer(res)\n",
+    "\n",
+    "def consumer(res):\n",
+    "    time.sleep(1)\n",
+    "    print(f\"消费者吃了{res}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    producer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 队列版本</br>\n",
+    "1. 生产者消费者模式是通过一个容器来解决生产者和消费者的强耦合问题。\n",
+    "2. 生产者和消费者彼此之间不直接通讯，而通过阻塞队列来进行通讯，所以生产者生产完数据之后不用等待消费者处理，</br>直接扔给阻塞队列，消费者不找生产者要数据，而是直接从阻塞队列里取，</br>阻塞队列就相当于一个缓冲区，平衡了生产者和消费者的处理能力。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_producer_consumer.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile test_producer_consumer.py\n",
+    "from multiprocessing import Queue,Process\n",
+    "import time\n",
+    "\n",
+    "def producer(q,name,product):\n",
+    "    \"\"\"生产者\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    q : _type_ queue\n",
+    "        _description_ 队列容器\n",
+    "    name : _type_\n",
+    "        _description_ 生产者名字\n",
+    "    product : _type_\n",
+    "        _description_ 生产的产品名字\n",
+    "    \"\"\"\n",
+    "    for i in range(1,10):\n",
+    "        res=f\"{product}{i}\"\n",
+    "        time.sleep(0.5)\n",
+    "        print(f\"{name} 生产了 {res}\")\n",
+    "        q.put(res)\n",
+    "    #*q.put(None) 单个生产者的话，可以在这里加，多个则不行\n",
+    "    \n",
+    "def consumer(q,name):\n",
+    "    \"\"\"消费者\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    q : _type_\n",
+    "        _description_ 队列容器\n",
+    "    name : _type_\n",
+    "        _description_ 消费者名字\n",
+    "    \"\"\"\n",
+    "    while True:\n",
+    "        time.sleep(1.5)\n",
+    "        res=q.get()\n",
+    "        if res is None: break\n",
+    "        print(f\"{name} 消费了 {res}\")\n",
+    "    \n",
+    "if __name__==\"__main__\":\n",
+    "    #* 容器\n",
+    "    q=Queue()\n",
+    "    p1=Process(target=producer,args=(q,\"生产者1\",\"包子\"))\n",
+    "    c1=Process(target=consumer,args=(q,\"消费者1\"))\n",
+    "    p1.start()\n",
+    "    c1.start()\n",
+    "\n",
+    "    p1.join() #* 在主线程里发信号，需要等待生产者结束\n",
+    "    q.put(None) #* 加入生产者生产完毕的信号，不加的话消费者会死循环\n",
+    "    print(\"主线程\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 多个生产者、消费者"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_producer_consumer.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile test_producer_consumer.py\n",
+    "from multiprocessing import Queue,Process\n",
+    "import time\n",
+    "\n",
+    "def producer(q,name,product):\n",
+    "    \"\"\"生产者\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    q : _type_ queue\n",
+    "        _description_ 队列容器\n",
+    "    name : _type_\n",
+    "        _description_ 生产者名字\n",
+    "    product : _type_\n",
+    "        _description_ 生产的产品名字\n",
+    "    \"\"\"\n",
+    "    for i in range(1,6):\n",
+    "        res=f\"{product}{i}\"\n",
+    "        time.sleep(0.5)\n",
+    "        print(f\"{name} 生产了 {res}\")\n",
+    "        q.put(res)\n",
+    "        \n",
+    "def consumer(q,name):\n",
+    "    \"\"\"生产者\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    q : _type_\n",
+    "        _description_ 队列容器\n",
+    "    name : _type_\n",
+    "        _description_ 消费者名字\n",
+    "    \"\"\"\n",
+    "    while True:\n",
+    "        time.sleep(1.5)\n",
+    "        res=q.get()\n",
+    "        if res is None: break\n",
+    "        print(f\"{name} 消费了 {res}\")\n",
+    "    \n",
+    "if __name__==\"__main__\":\n",
+    "    #* 容器\n",
+    "    q=Queue()\n",
+    "    p1=Process(target=producer,args=(q,\"生产者1\",\"包子\"))\n",
+    "    p2=Process(target=producer,args=(q,\"生产者2\",\"饺子\"))\n",
+    "    p3=Process(target=producer,args=(q,\"生产者3\",\"粽子\"))\n",
+    "    c1=Process(target=consumer,args=(q,\"雅木茶\"))\n",
+    "    c2=Process(target=consumer,args=(q,\"悟空\"))\n",
+    "    p1.start()\n",
+    "    p2.start()\n",
+    "    p3.start()\n",
+    "    c1.start()\n",
+    "    c2.start()\n",
+    "\n",
+    "    p1.join()\n",
+    "    p2.join()\n",
+    "    p3.join()\n",
+    "    q.put(None) #* 有几个消费者就要发几个None,有点不优雅\n",
+    "    q.put(None)\n",
+    "    print(\"主线程\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.8.13 ('study')",
    "language": "python",
    "name": "python3"
   },
@@ -81,12 +281,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "af2924f10f5eb76fd65ccea448a69e80be7838e947e8a1ae982ab7073141c8a7"
+    "hash": "46cb6235441a8b74df724a68ed242e7b6759bfc907d92e7c8b163c38b1b4592e"
    }
   }
  },
