--- a/00Pratice/03os/01多进程/08JoinableQueue的使用.ipynb
+++ b/00Pratice/03os/01多进程/08JoinableQueue的使用.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
     "        res=q.get() #* 如果不是守护进程，会一直在这里等着取数据\n",
     "        if res is None: break\n",
     "        print(f\"{name} 消费了 {res}\")\n",
-    "        q.task_done() #* 像队列发送取完一个数据的信号\n",
+    "        q.task_done() #* 向队列发送取完一个数据的信号\n",
     "    \n",
     "if __name__==\"__main__\":\n",
     "    #* 容器\n",
@@ -92,7 +92,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -106,12 +106,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e42634819b8c191a5d07eaf23810ff32516dd8d3875f28ec3e488928fbd3c187"
+    "hash": "af2924f10f5eb76fd65ccea448a69e80be7838e947e8a1ae982ab7073141c8a7"
    }
   }
  },
