--- a/00Pratice/02advanced/06concurrency_futures.ipynb
+++ b/00Pratice/02advanced/06concurrency_futures.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "def download_one(url):\n",
     "    resp = requests.get(url)\n",
-    "    print(\"Read {} from {}\".format(len(resp.content), url))\n",
+    "    print(f\"Read {len(resp.content)} from {url}\")\n",
     "\n",
     "\n",
     "def download_all(sites):\n",
@@ -73,7 +73,7 @@
     "    start_time = time.perf_counter()\n",
     "    download_all(sites)\n",
     "    end_time = time.perf_counter()\n",
-    "    print(\"Download {} sites in {} seconds\".format(len(sites), end_time - start_time))\n",
+    "    print(f\"Download {len(sites)} sites in {end_time - start_time} seconds\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -111,7 +111,7 @@
     "\n",
     "def download_one(url):\n",
     "    resp = requests.get(url)\n",
-    "    print(\"Read {} from {}\".format(len(resp.content), url))\n",
+    "    print(f\"Read {len(resp.content)} from {url}\")\n",
     "\n",
     "# 多线程处理\n",
     "def download_all(sites):\n",
@@ -133,7 +133,7 @@
     "    start_time = time.perf_counter()\n",
     "    download_all(sites)\n",
     "    end_time = time.perf_counter()\n",
-    "    print(\"Download {} sites in {} seconds\".format(len(sites), end_time - start_time))\n",
+    "    print(f\"Download {len(sites)} sites in {end_time - start_time} seconds\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -164,7 +164,7 @@
     "\n",
     "def download_one(url):\n",
     "    resp = requests.get(url)\n",
-    "    print(\"Read {} from {}\".format(len(resp.content), url))\n",
+    "    print(f\"Read {len(resp.content)} from {url}\")\n",
     "\n",
     "# 多进程处理\n",
     "def download_all(sites):\n",
@@ -187,7 +187,7 @@
     "    start_time = time.perf_counter()\n",
     "    download_all(sites)\n",
     "    end_time = time.perf_counter()\n",
-    "    print(\"Download {} sites in {} seconds\".format(len(sites), end_time - start_time))\n",
+    "    print(f\"Download {len(sites)} sites in {end_time - start_time} seconds\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -225,7 +225,7 @@
     "\n",
     "def download_one(url):\n",
     "    resp = requests.get(url)\n",
-    "    print(\"Read {} from {}\".format(len(resp.content), url))\n",
+    "    print(f\"Read {len(resp.content)} from {url}\")\n",
     "\n",
     "# 多线程处理\n",
     "def download_all(sites):\n",
@@ -251,7 +251,7 @@
     "    start_time = time.perf_counter()\n",
     "    download_all(sites)\n",
     "    end_time = time.perf_counter()\n",
-    "    print(\"Download {} sites in {} seconds\".format(len(sites), end_time - start_time))\n",
+    "    print(f\"Download {len(sites)} sites in {end_time - start_time} seconds\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -261,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('study')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -275,12 +275,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "46cb6235441a8b74df724a68ed242e7b6759bfc907d92e7c8b163c38b1b4592e"
+    "hash": "af2924f10f5eb76fd65ccea448a69e80be7838e947e8a1ae982ab7073141c8a7"
    }
   }
  },
