--- a/00Pratice/03os/test.ipynb
+++ b/00Pratice/03os/test.ipynb
@@ -37,11 +37,60 @@
     "plt.title('Fills and Alpha Example')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32md:\\study\\vsworkspace\\study_python\\00Pratice\\03os\\test.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/study/vsworkspace/study_python/00Pratice/03os/test.ipynb#W2sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m d\u001b[39m.\u001b[39mrectangle((\u001b[39m0\u001b[39m, \u001b[39m25\u001b[39m, \u001b[39m50\u001b[39m, \u001b[39m50\u001b[39m), fill\u001b[39m=\u001b[39m(\u001b[39m39\u001b[39m, \u001b[39m112\u001b[39m, \u001b[39m229\u001b[39m), outline\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/study/vsworkspace/study_python/00Pratice/03os/test.ipynb#W2sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m font_type \u001b[39m=\u001b[39m ImageFont\u001b[39m.\u001b[39mtruetype(\u001b[39m\"\u001b[39m\u001b[39marial.ttf\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m25\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/study/vsworkspace/study_python/00Pratice/03os/test.ipynb#W2sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m a \u001b[39m=\u001b[39m psutil\u001b[39m.\u001b[39;49mcpu_percent(interval\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, percpu\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/study/vsworkspace/study_python/00Pratice/03os/test.ipynb#W2sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m b \u001b[39m=\u001b[39m psutil\u001b[39m.\u001b[39mvirtual_memory()\u001b[39m.\u001b[39mpercent\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/study/vsworkspace/study_python/00Pratice/03os/test.ipynb#W2sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m d\u001b[39m.\u001b[39mtext((\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00ma\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00mb\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m, fill\u001b[39m=\u001b[39m(\u001b[39m255\u001b[39m, \u001b[39m255\u001b[39m, \u001b[39m255\u001b[39m), font\u001b[39m=\u001b[39mfont_type)\n",
+      "File \u001b[1;32md:\\python\\Anaconda3\\lib\\site-packages\\psutil\\__init__.py:1739\u001b[0m, in \u001b[0;36mcpu_percent\u001b[1;34m(interval, percpu)\u001b[0m\n\u001b[0;32m   1737\u001b[0m \u001b[39mif\u001b[39;00m blocking:\n\u001b[0;32m   1738\u001b[0m     t1 \u001b[39m=\u001b[39m cpu_times()\n\u001b[1;32m-> 1739\u001b[0m     time\u001b[39m.\u001b[39;49msleep(interval)\n\u001b[0;32m   1740\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1741\u001b[0m     t1 \u001b[39m=\u001b[39m _last_cpu_times\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from infi.systray import SysTrayIcon\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    "import time\n",
+    "import psutil\n",
+    "\n",
+    "image = \"main.ico\"\n",
+    "initialStart = True\n",
+    "systray = SysTrayIcon(image, \"CPU/MEM\")\n",
+    "\n",
+    "while True:\n",
+    "    img = Image.new('RGBA', (50, 50), color=(255, 255, 255, 100))\n",
+    "    d = ImageDraw.Draw(img)\n",
+    "    d.rectangle((0, 25, 50, 50), fill=(39, 112, 229), outline=None)\n",
+    "\n",
+    "    font_type = ImageFont.truetype(\"arial.ttf\", 25)\n",
+    "    a = psutil.cpu_percent(interval=1, percpu=False)\n",
+    "    b = psutil.virtual_memory().percent\n",
+    "    d.text((0, 0), f\"{a}\\n{b}\", fill=(255, 255, 255), font=font_type)\n",
+    "\n",
+    "    img.save(image)\n",
+    "\n",
+    "    if initialStart:\n",
+    "        systray.start()\n",
+    "        initialStart = False\n",
+    "    else:\n",
+    "        systray.update(icon=image)\n",
+    "    time.sleep(0.5)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -55,12 +104,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e42634819b8c191a5d07eaf23810ff32516dd8d3875f28ec3e488928fbd3c187"
+    "hash": "af2924f10f5eb76fd65ccea448a69e80be7838e947e8a1ae982ab7073141c8a7"
    }
   }
  },
