进程池线程池练习

--- a/00Pratice/03os/02多线程/12多线程实现并发的套接字通信.ipynb
+++ b/00Pratice/03os/02多线程/12多线程实现并发的套接字通信.ipynb
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing server.py\n"
+      "Overwriting server.py\n"
      ]
     }
    ],
@@ -60,6 +60,7 @@
     "%%writefile server.py\n",
     "from socket import *\n",
     "from threading import Thread\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "def talk(conn):\n",
     "    while True:\n",
@@ -81,13 +82,15 @@
     "    server.listen(5)\n",
     "    while True:\n",
     "        conn,add=server.accept()\n",
-    "        t=Thread(target=talk,args=(conn,))\n",
-    "        t.start()\n",
+    "        # t=Thread(target=talk,args=(conn,))\n",
+    "        # t.start()\n",
+    "        pool.submit(talk,conn)\n",
     "\n",
     "    server.close()    \n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
+    "    pool=ThreadPoolExecutor(2)\n",
     "    server('127.0.0.1', 8080)\n"
    ]
   }
