--- a/00Pratice/03os/01多进程/04多进程练习题.ipynb
+++ b/00Pratice/03os/01多进程/04多进程练习题.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 并发的进程\n",
+    "1. Concurrency：the fact of two or more events or \n",
+    "circumstances ***happening or existing*** at the same time. \n",
+    "2. 与“并行”的区别 ：***running*** at the same time\n",
+    "3. 进程并发的动机：多道程序设计 \n",
+    "4. 为什么不叫“并行的进程”？ :并发包括并行，进程并发不一定是并行的\n",
+    "\n",
+    "# 并发进程共享CPU\n",
+    "1. 并发进程可能无法一次性执行完毕，会走走停停。 \n",
+    "2. 一个进程在执行过程中可能会被另一个进程替换占有CPU，这个过程称作“进程切换”。</br>\n",
+    "cpu1:——————....——————........——————end</br>\n",
+    "cpu2:......————.........................————end</br>\n",
+    "cpu3:................————————.........——end</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1.进程之间的内存空间是共享的还是隔离的？"
    ]
   },
@@ -32,7 +51,6 @@
     "    print(\"子进程n：{}\".format(n))\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    __spec__ = \"ModuleSpec(name='builtins', loader=<class '_frozen_importlib.BuiltinImporter'>)\"\n",
     "\n",
     "    p=Process(target=work,)\n",
     "    p.start()\n",
@@ -99,6 +117,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 客户端"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -160,7 +185,6 @@
     "    \n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    __spec__ = \"ModuleSpec(name='builtins', loader=<class '_frozen_importlib.BuiltinImporter'>)\"\n",
     "\n",
     "    start_time = time.time()\n",
     "    p1=Process(target=task,args=(1,))\n",
