--- a/00Pratice/02advanced/05coroutine.ipynb
+++ b/00Pratice/02advanced/05coroutine.ipynb
@@ -55,18 +55,16 @@
     "        n = yield r\n",
     "        if not n:\n",
     "            return\n",
-    "        print('[CONSUMER] Consuming %s...' % n)\n",
+    "        print(f'[CONSUMER] Consuming {n}...')\n",
     "        r = '200 OK'\n",
     "\n",
     "\n",
     "def produce(c):\n",
     "    c.send(None)\n",
-    "    n = 0\n",
-    "    while n < 5:\n",
-    "        n = n + 1\n",
-    "        print('[PRODUCER] Producing %s...' % n)\n",
+    "    for n in range(1, 6):\n",
+    "        print(f'[PRODUCER] Producing {n}...')\n",
     "        r = c.send(n)\n",
-    "        print('[PRODUCER] Consumer return: %s' % r)\n",
+    "        print(f'[PRODUCER] Consumer return: {r}')\n",
     "    c.close()\n",
     "\n",
     "\n",
@@ -109,10 +107,10 @@
     "\n",
     "\n",
     "def crawl_page(url):\n",
-    "    print('crawling {}'.format(url))\n",
+    "    print(f'crawling {url}')\n",
     "    sleep_time = int(url.split('_')[-1])\n",
     "    time.sleep(sleep_time)\n",
-    "    print('OK {}'.format(url))\n",
+    "    print(f'OK {url}')\n",
     "\n",
     "\n",
     "def main(urls):\n",
@@ -149,10 +147,10 @@
     "\n",
     "\n",
     "async def crawl_page(url):\n",
-    "    print('crawling {}'.format(url))\n",
+    "    print(f'crawling {url}')\n",
     "    sleep_time = int(url.split('_')[-1])\n",
     "    await asyncio.sleep(sleep_time)\n",
-    "    print('OK {}'.format(url))\n",
+    "    print(f'OK {url}')\n",
     "\n",
     "\n",
     "async def main(urls):\n",
@@ -194,10 +192,10 @@
     "\n",
     "\n",
     "async def crawl_page(url):\n",
-    "    print('crawling {}'.format(url))\n",
+    "    print(f'crawling {url}')\n",
     "    sleep_time = int(url.split('_')[-1])\n",
     "    await asyncio.sleep(sleep_time)\n",
-    "    print('OK {}'.format(url))\n",
+    "    print(f'OK {url}')\n",
     "\n",
     "\n",
     "async def main(urls):\n",
@@ -240,10 +238,10 @@
     "\n",
     "\n",
     "async def crawl_page(url):\n",
-    "    print('crawling {}'.format(url))\n",
+    "    print(f'crawling {url}')\n",
     "    sleep_time = int(url.split('_')[-1])\n",
     "    await asyncio.sleep(sleep_time)\n",
-    "    print('OK {}'.format(url))\n",
+    "    print(f'OK {url}')\n",
     "\n",
     "\n",
     "async def main(urls):\n",
@@ -445,7 +443,7 @@
     "async def consumer(queue, id):\n",
     "    while True:\n",
     "        val = await queue.get()\n",
-    "        print('{} get a val: {}'.format(id, val))\n",
+    "        print(f'{id} get a val: {val}')\n",
     "        await asyncio.sleep(1)\n",
     "\n",
     "\n",
@@ -453,7 +451,7 @@
     "    for _ in range(5):\n",
     "        val = random.randint(1, 10)\n",
     "        await queue.put(val)\n",
-    "        print('{} set a val: {}'.format(id, val))\n",
+    "        print(f'{id} set a val: {val}')\n",
     "        await asyncio.sleep(1)\n",
     "\n",
     "\n",
@@ -514,7 +512,7 @@
     "        soup_item = BeautifulSoup(response_item, \"lxml\")\n",
     "        img_tag = soup_item.find(\"img\")\n",
     "\n",
-    "        print(\"{} {} {}\".format(movie_name, movie_date, img_tag.get(\"src\")))\n",
+    "        print(f'{movie_name} {movie_date} {img_tag.get(\"src\")}')\n",
     "\n",
     "\n",
     "%time main()\n"
@@ -566,7 +564,7 @@
     "        soup_item = BeautifulSoup(page, 'lxml')\n",
     "        img_tag = soup_item.find(\"img\")\n",
     "\n",
-    "    print(\"{} {} {}\".format(movie_name, movie_date, img_tag.get(\"src\")))\n",
+    "    print(f'{movie_name} {movie_date} {img_tag.get(\"src\")}')\n",
     "\n",
     "await main()\n"
    ]
@@ -574,7 +572,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -588,12 +586,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e42634819b8c191a5d07eaf23810ff32516dd8d3875f28ec3e488928fbd3c187"
+    "hash": "af2924f10f5eb76fd65ccea448a69e80be7838e947e8a1ae982ab7073141c8a7"
    }
   }
  },
