--- a/00Pratice/03os/03协程/04gevent的异步提交.ipynb
+++ b/00Pratice/03os/03协程/04gevent的异步提交.ipynb
@@ -18,37 +18,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gevent\n",
-    "from gevent import monkey\n",
-    "monkey.patch_all()  # * 对所有IO操作打补丁\n",
-    "    \n",
+    "%%writefile test_gevent.py\n",
+    "from gevent import spawn,joinall,monkey;monkey.patch_all()\n",
     "import timeit\n",
-    "import time\n",
     "\n",
+    "import time\n",
     "def task(pid):\n",
     "    \"\"\"\n",
     "    Some non-deterministic task 非确定\n",
     "    \"\"\"\n",
     "    time.sleep(0.5)\n",
-    "    print(f\"Task {pid} done\")\n",
+    "    print(f'Task {pid} done')\n",
     "\n",
     "\n",
     "def synchronous():\n",
     "    for i in range(10):\n",
     "        task(i)\n",
     "\n",
-    "\n",
     "def asynchronous():\n",
-    "    g_l = [gevent.spawn(task, i) for i in range(10)]\n",
-    "    gevent.joinall(g_l)\n",
+    "    g_l=[spawn(task,i) for i in range(10)]\n",
+    "    joinall(g_l)\n",
     "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    print(\"Synchronous:\")\n",
-    "    print(timeit.timeit(synchronous, number=1))\n",
-    "\n",
-    "    print(\"Asynchronous:\")\n",
-    "    print(timeit.timeit(asynchronous, number=1))"
+    "if __name__ == '__main__':\n",
+    "    print('Synchronous:')\n",
+    "    print(timeit.timeit(synchronous,number=1))\n",
+    "    print('Asynchronous:')\n",
+    "    print(timeit.timeit(asynchronous,number=1))"
    ]
   }
  ],
