非阻塞IO模型

--- a/00Pratice/03os/04IO模型/03非阻塞IO模型.ipynb
+++ b/00Pratice/03os/04IO模型/03非阻塞IO模型.ipynb
@@ -36,6 +36,110 @@
     "\n",
     "- 所以，在非阻塞式IO中，用户进程其实是***需要不断的主动询问***kernel数据准备好了没有。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 服务端\n",
+    "import socket\n",
+    "import time\n",
+    "\n",
+    "server=socket.socket()\n",
+    "server.setsockopt(socket.SOL_SOCKET,socket.SO_REUSEADDR,1)\n",
+    "server.bind(('127.0.0.1',8083))\n",
+    "server.listen(5)\n",
+    "\n",
+    "server.setblocking(False)\n",
+    "r_list=[]\n",
+    "w_list={}\n",
+    "\n",
+    "while 1:\n",
+    "    try:\n",
+    "        conn,addr=server.accept()\n",
+    "        r_list.append(conn)\n",
+    "    except BlockingIOError:\n",
+    "        # 强调强调强调：！！！非阻塞IO的精髓在于完全没有阻塞！！！\n",
+    "        # time.sleep(0.5) # 打开该行注释纯属为了方便查看效果\n",
+    "        print('在做其他的事情')\n",
+    "        print('rlist: ',len(r_list))\n",
+    "        print('wlist: ',len(w_list))\n",
+    "\n",
+    "\n",
+    "        # 遍历读列表，依次取出套接字读取内容\n",
+    "        del_rlist=[]\n",
+    "        for conn in r_list:\n",
+    "            try:\n",
+    "                data=conn.recv(1024)\n",
+    "                if not data:\n",
+    "                    conn.close()\n",
+    "                    del_rlist.append(conn)\n",
+    "                    continue\n",
+    "                w_list[conn]=data.upper()\n",
+    "            except BlockingIOError: # 没有收成功，则继续检索下一个套接字的接收\n",
+    "                continue\n",
+    "            except ConnectionResetError: # 当前套接字出异常，则关闭，然后加入删除列表，等待被清除\n",
+    "                conn.close()\n",
+    "                del_rlist.append(conn)\n",
+    "\n",
+    "\n",
+    "        # 遍历写列表，依次取出套接字发送内容\n",
+    "        del_wlist=[]\n",
+    "        for conn,data in w_list.items():\n",
+    "            try:\n",
+    "                conn.send(data)\n",
+    "                del_wlist.append(conn)\n",
+    "            except BlockingIOError:\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "        # 清理无用的套接字,无需再监听它们的IO操作\n",
+    "        for conn in del_rlist:\n",
+    "            r_list.remove(conn)\n",
+    "\n",
+    "        for conn in del_wlist:\n",
+    "            w_list.pop(conn)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#客户端\n",
+    "import socket\n",
+    "import os\n",
+    "\n",
+    "client=socket.socket()\n",
+    "client.connect(('127.0.0.1',8083))\n",
+    "\n",
+    "while 1:\n",
+    "    res = f'{os.getpid()} hello'.encode('utf-8')\n",
+    "    client.send(res)\n",
+    "    data=client.recv(1024)\n",
+    "\n",
+    "    print(data.decode('utf-8'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "但是非阻塞IO模型绝不被推荐。\n",
+    "\n",
+    "我们不能否则其优点：能够在等待任务完成的时间里干其他活了（包括提交其他任务，也就是 “后台” 可以有多个任务在“”同时“”执行）。\n",
+    "\n",
+    "但是也难掩其缺点：\n",
+    "\n",
+    "1. 循环调用recv()将大幅度推高CPU占用率；这也是我们在代码中留一句time.sleep(2)的原因,否则在低配主机下极容易出现卡机情况\n",
+    "2. 任务完成的响应延迟增大了，因为每过一段时间才去轮询一次read操作，而任务可能在两次轮询之间的任意时间完成。这会导致整体数据吞吐量的降低。\n",
+    "\n",
+    "**此外，在这个方案中recv()更多的是起到检测“操作是否完成”的作用，实际操作系统提供了更为高效的检测“操作是否完成“作用的接口，例如select()多路复用模式，可以一次检测多个连接是否活跃。**"
+   ]
   }
  ],
  "metadata": {
