--- a/03core/2.4decorator.ipynb
+++ b/03core/2.4decorator.ipynb
@@ -1,13 +1,56 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 装饰器\n",
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "1. [装饰器](#toc1_)    \n",
+    "1.1. [目的](#toc1_1_)    \n",
+    "1.2. [知识准备](#toc1_2_)    \n",
+    "1.2.1. [引用](#toc1_2_1_)    \n",
+    "1.2.2. [闭包](#toc1_2_2_)    \n",
+    "1.3. [引入装饰器](#toc1_3_)    \n",
+    "1.3.1. [问题](#toc1_3_1_)    \n",
+    "1.3.2. [尝试解决问题](#toc1_3_2_)    \n",
+    "1.3.2.1. [老大把工作交给 Low B](#toc1_3_2_1_)    \n",
+    "1.3.2.2. [老大把工作交给 Low BB](#toc1_3_2_2_)    \n",
+    "1.3.2.3. [老大把工作交给 Low BBB](#toc1_3_2_3_)    \n",
+    "1.4. [装饰器](#toc1_4_)    \n",
+    "1.4.1. [@xxx实现过程](#toc1_4_1_)    \n",
+    "1.4.2. [测试](#toc1_4_2_)    \n",
+    "1.4.3. [研究实现@的功能](#toc1_4_3_)    \n",
+    "1.4.4. [使用@对函数装饰的时间](#toc1_4_4_)    \n",
+    "1.4.5. [思考](#toc1_4_5_)    \n",
+    "1.5. [深入装饰器](#toc1_5_)    \n",
+    "1.5.1. [对无参数的函数进行装饰](#toc1_5_1_)    \n",
+    "1.5.2. [对有参数的函数进行装饰](#toc1_5_2_)    \n",
+    "1.5.3. [对带有不定长参数的函数进行装饰](#toc1_5_3_)    \n",
+    "1.5.4. [对带有return的函数进行装饰](#toc1_5_4_)    \n",
+    "1.5.5. [多个装饰器对同一个函数装饰](#toc1_5_5_)    \n",
+    "1.5.6. [装饰器带参数](#toc1_5_6_)    \n",
+    "1.5.7. [用类当做装饰器](#toc1_5_7_)    \n",
+    "1.5.7.1. [直接调用实例对象](#toc1_5_7_1_)    \n",
+    "1.5.7.2. [使用类对函数进行装饰](#toc1_5_7_2_)    \n",
+    "1.6. [总结](#toc1_6_)    \n",
     "\n",
-    "## 目的\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=true\n",
+    "\tanchor=true\n",
+    "\tflat=true\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. <a id='toc1_'></a>[装饰器](#toc0_)\n",
+    "\n",
+    "## 1.1. <a id='toc1_1_'></a>[目的](#toc0_)\n",
     "\n",
     "看如下代码："
    ]
@@ -47,7 +90,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,9 +105,9 @@
     ">装饰器是程序开发中经常会用到的一个功能，用好了装饰器，开发效率如虎添翼，所以这也是Python面试中必问的问题，但对于好多初次接触这个知识的人来讲，这个功能有点绕，自学时直接绕过去了，然后面试问到了就挂了，因为装饰器是程序开发的基础知识，这个都不会，别跟人家说你会Python, 看了下面的文章，保证你学会装饰器。\n",
     "\n",
     "\n",
-    "## 知识准备\n",
+    "## 1.2. <a id='toc1_2_'></a>[知识准备](#toc0_)\n",
     "\n",
-    "### 引用\n",
+    "### 1.2.1. <a id='toc1_2_1_'></a>[引用](#toc0_)\n",
     "测试代码1（定义函数、调用函数、函数名是函数引用）"
    ]
   },
@@ -126,13 +168,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "函数名仅仅是个变量，只不过指向了定义的函数而已，所以才能通过**函数名()**调用，如果**函数名=xxx**被修改了，那么当在执行**函数名()**时，调用的就不是之前的那个函数了\n",
     "\n",
-    "### 闭包"
+    "### 1.2.2. <a id='toc1_2_2_'></a>[闭包](#toc0_)"
    ]
   },
   {
@@ -165,16 +206,15 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "小复习：\n",
     ">闭包用到的核心其实就是：在一个函数中返回另外一个函数的引用，只不过这个被返回的函数中用到了其他函数中的变量而已。说到底就是 只要用一个变量指向某个函数代码块，就可以调用它\n",
     "\n",
-    "## 引入装饰器\n",
+    "## 1.3. <a id='toc1_3_'></a>[引入装饰器](#toc0_)\n",
     "\n",
-    "### 问题\n",
+    "### 1.3.1. <a id='toc1_3_1_'></a>[问题](#toc0_)\n",
     "\n",
     "初创公司有N个业务部门，基础平台部门负责提供底层的功能，如：\n",
     "- 数据库操作\n",
@@ -232,7 +272,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -246,16 +285,16 @@
     "\n",
     "想想，如果是你接手这个任务，你会怎么做呢？\n",
     "\n",
-    "### 尝试解决问题\n",
+    "### 1.3.2. <a id='toc1_3_2_'></a>[尝试解决问题](#toc0_)\n",
     "\n",
-    "#### 老大把工作交给 Low B\n",
+    "#### 1.3.2.1. <a id='toc1_3_2_1_'></a>[老大把工作交给 Low B](#toc0_)\n",
     "他是这么做的：\n",
     "\n",
     "> 跟每个业务部门交涉，每个业务部门自己写代码，调用基础平台的功能之前先验证。哎！这样一来基础平台就不需要做任何修改了。太棒了，有充足的时间泡妹子...\n",
     "\n",
     "当天Low B 被开除了…\n",
     "\n",
-    "#### 老大把工作交给 Low BB\n",
+    "#### 1.3.2.2. <a id='toc1_3_2_2_'></a>[老大把工作交给 Low BB](#toc0_)\n",
     "他是这么做的："
    ]
   },
@@ -320,13 +359,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "过了一周 Low BB 被开除了…\n",
     "\n",
-    "#### 老大把工作交给 Low BBB\n",
+    "#### 1.3.2.3. <a id='toc1_3_2_3_'></a>[老大把工作交给 Low BBB](#toc0_)\n",
     "他是这么做的：\n",
     ">只对基础平台的代码进行重构，其他业务部门无需做任何修改"
    ]
@@ -407,7 +445,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -417,7 +454,7 @@
     "\n",
     "老大正要生气，突然Low BBB的手机掉到地上，恰巧屏保就是Low BBB的女友照片，老大一看，喜笑颜开，决定和Low BBB交个好朋友，将他所知道的全部告诉他。\n",
     "\n",
-    "## 装饰器\n",
+    "## 1.4. <a id='toc1_4_'></a>[装饰器](#toc0_)\n",
     "单独以函数f1为例："
    ]
   },
@@ -441,7 +478,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -454,7 +490,7 @@
     "\n",
     "从表面上看解释器着实会执行这两句，但是@check_login这一句代码里却有大文章， @xxx 是Python的一种语法糖（简单理解为令你很惊奇的功能）\n",
     "\n",
-    "### @xxx实现过程\n",
+    "### 1.4.1. <a id='toc1_4_1_'></a>[@xxx实现过程](#toc0_)\n",
     "上例中@check_login内部会执行以下操作：\n",
     "\n",
     "**步骤1：执行check_login函数**</br>\n",
@@ -531,7 +567,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -539,7 +574,7 @@
     "\n",
     "如此一来， 即执行了验证的功能，又执行了原来f1函数的内容，并将原f1函数返回值 返回给业务调用着\n",
     "\n",
-    "### 测试"
+    "### 1.4.2. <a id='toc1_4_2_'></a>[测试](#toc0_)"
    ]
   },
   {
@@ -582,11 +617,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 研究实现@的功能"
+    "### 1.4.3. <a id='toc1_4_3_'></a>[研究实现@的功能](#toc0_)"
    ]
   },
   {
@@ -631,13 +665,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Low BBB 你明白了吗？要是没明白的话，我晚上去你家帮你实现吧！！！\n",
     "\n",
-    "### 使用@对函数装饰的时间"
+    "### 1.4.4. <a id='toc1_4_4_'></a>[使用@对函数装饰的时间](#toc0_)"
    ]
   },
   {
@@ -680,11 +713,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 思考\n",
+    "### 1.4.5. <a id='toc1_4_5_'></a>[思考](#toc0_)\n",
     "\n",
     "其实实现装饰器用到了闭包，只是将闭包中外部函数的返回值 给了 被装饰函数名字，从而修改了函数指向而已\n",
     "\n",
@@ -774,7 +806,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -792,9 +823,9 @@
     "    - 权限校验等场景\n",
     "    - 缓存\n",
     "\n",
-    "## 深入装饰器\n",
+    "## 1.5. <a id='toc1_5_'></a>[深入装饰器](#toc0_)\n",
     "\n",
-    "### 对无参数的函数进行装饰\n"
+    "### 1.5.1. <a id='toc1_5_1_'></a>[对无参数的函数进行装饰](#toc0_)\n"
    ]
   },
   {
@@ -854,7 +885,7 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "### 对有参数的函数进行装饰"
+    "### 1.5.2. <a id='toc1_5_2_'></a>[对有参数的函数进行装饰](#toc0_)"
    ]
   },
   {
@@ -906,7 +937,7 @@
    "source": [
     "![image.png](attachment:image.png)\n",
     "\n",
-    "### 对带有不定长参数的函数进行装饰"
+    "### 1.5.3. <a id='toc1_5_3_'></a>[对带有不定长参数的函数进行装饰](#toc0_)"
    ]
   },
   {
@@ -950,11 +981,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 对带有return的函数进行装饰"
+    "### 1.5.4. <a id='toc1_5_4_'></a>[对带有return的函数进行装饰](#toc0_)"
    ]
   },
   {
@@ -1060,7 +1090,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1068,7 +1097,7 @@
     "\n",
     "一般情况下为了让装饰器更通用，可以有return，即使这个被装饰的函数默认没有返回值也不会有问题，因为此时相当于return None\n",
     "\n",
-    "### 多个装饰器对同一个函数装饰"
+    "### 1.5.5. <a id='toc1_5_5_'></a>[多个装饰器对同一个函数装饰](#toc0_)"
    ]
   },
   {
@@ -1130,7 +1159,7 @@
    "source": [
     "![image.png](attachment:image.png)\n",
     "\n",
-    "### 装饰器带参数\n",
+    "### 1.5.6. <a id='toc1_5_6_'></a>[装饰器带参数](#toc0_)\n",
     "\n",
     "在原有装饰器的基础上，设置外部变量"
    ]
@@ -1197,11 +1226,11 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "### 用类当做装饰器\n",
+    "### 1.5.7. <a id='toc1_5_7_'></a>[用类当做装饰器](#toc0_)\n",
     "\n",
     "装饰器函数其实是这样一个接口约束，它必须接受一个callable对象作为参数，然后返回一个callable对象。在Python中一般callable对象都是函数，但也有例外。只要某个对象重写了 __call__() 方法，那么这个对象就是callable的。\n",
     "\n",
-    "#### 直接调用实例对象"
+    "#### 1.5.7.1. <a id='toc1_5_7_1_'></a>[直接调用实例对象](#toc0_)"
    ]
   },
   {
@@ -1227,11 +1256,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 使用类对函数进行装饰"
+    "#### 1.5.7.2. <a id='toc1_5_7_2_'></a>[使用类对函数进行装饰](#toc0_)"
    ]
   },
   {
@@ -1278,11 +1306,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 总结\n",
+    "## 1.6. <a id='toc1_6_'></a>[总结](#toc0_)\n",
     "1. 装饰器：能够快速将函数的指向修改，能够在不修改代码的前提下，给函数添加功能的方式\n",
     "2. 装饰器功能：给函数添加功能\n",
     "3. 特点：不修改原函数代码，还能添加功能；只能在原函数运行之前或者之后添加，不能在原函数运行一半时添加\n",
